fixed padding left on small devices + fixed navbar-toggler on small devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,3 +17,8 @@ nav a {
 .navbar-brand {
     font-size: 1rem;
 }
+@media (min-width: 576px) {
+    .container {
+        padding-left: 0px;
+    }    
+}
